--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,10 @@ body {
     color: #fff;
     font-family: "MedievalSharp", cursive;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: .5rem;
+}
