--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,20 @@ main {
     align-items: center;
     margin-top: .5rem;
 }
+
+.character-card {
+    height: 14rem;
+    margin-top: .5rem;
+    width: 94vw;
+    max-width: 230px;
+    padding: 1wh 1vw;
+    font-size: 1.6rem;
+    color: #fff;
+    border-radius: 14px;
+    position: relative;
+    background: #212;
+    text-align: center;
+    overflow: hidden;
+    border: 0.2rem solid #000721;
+    box-shadow: inset 0 0 6px 2px rgba(100, 100, 100, 0.2), 0 0 10px rgba(117, 182, 214, 0.2);
+}
