--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,12 @@ main {
     letter-spacing: 0.08em;
     font-size: 90%;
 }
+
+.avatar {
+    width: 15vh;
+    border: 2px solid #002;
+    max-width: 100%;
+    opacity: 0.8;
+    border-radius: 10px;
+    background-color: rgba(0, 7, 33, 0.8);
+}
