--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,3 +87,17 @@ main {
 .health-bar-inner.danger {
     background: #d45;
 }
+
+.dice-container {
+    width: 100%;
+    height: 20%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #002;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+}
