--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,3 +117,30 @@ main {
 .dice-container .placeholder-dice {
     background-color: transparent;
 }
+
+button {
+    margin-top: .5rem;
+    font-family: "MedievalSharp", cursive;
+    background-color: #fc2;
+    border: 2px solid #930;
+    outline: none;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    border-radius: 6px;
+    cursor: pointer;
+    color: #930;
+    height: 9vh;
+    box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.4);
+}
+
+button:hover {
+    background: orangered;
+}
+
+button:focus {
+    background: #666;
+}
