Fix typo in css for character card padding value

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ main {
     margin-top: .5rem;
     width: 94vw;
     max-width: 230px;
-    padding: 1wh 1vw;
+    padding: 1vh 1vw;
     font-size: 1.6rem;
     color: #fff;
     border-radius: 14px;
