--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ main {
     box-shadow: inset 0 0 6px 2px rgba(100, 100, 100, 0.2), 0 0 10px rgba(117, 182, 214, 0.2);
 }
 
-@media(min-width: 550px) {
+@media(min-width:550px) {
     .character-card {
         border: 0.2rem solid #002;
         height: 26rem;
@@ -60,6 +60,13 @@ main {
     width: 100%;
     letter-spacing: 0.08em;
     font-size: 90%;
+}
+
+@media(min-width:550px) {
+    .name {
+        margin: 2vh 0;
+        font-size: 100%;
+    }
 }
 
 .avatar {
