Make avatar image for characters responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,12 @@ main {
     background-color: rgba(0, 7, 33, 0.8);
 }
 
+@media(min-width:550px) {
+    .avatar {
+        width: 25vh;
+    }
+}
+
 .health {
     font-size: 1.1rem;
     font-weight: normal;
